data_analysis.py absorbed into main.ipynb

--- a/serverfiles/main.ipynb
+++ b/serverfiles/main.ipynb
@@ -2,35 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "8e3c4776-3f7e-4ba7-8326-80f992499663",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "223903bb-4da1-4e76-9b7a-0cadb2fc4ce4",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello World!\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9dc42c37-5fce-4309-80ef-6cb886271479",
    "metadata": {},
    "outputs": [],
@@ -40,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f5ea8500-5e72-4486-a945-5397c05845a5",
    "metadata": {},
    "outputs": [],
@@ -50,30 +22,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "fb97774c-efb9-466f-a562-03239698affa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from thing import a_function"
+    "from modules.load import read_file\n",
+    "from modules.plots import countplot, distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "a6d90b15-4931-4612-b0e1-2fd9a871d1ba",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I am a function\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a_function()"
+    "df = read_file(spark, \"data/transactions.ndjson\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "536675eb-c578-4ff2-8f16-5490e7d305cc",
+   "metadata": {},
+   "source": [
+    "Look at the distribution of values of all the numerical columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "678e1595-b31b-4d36-a531-6b9a4a0ed1d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deicmal_cols = [col for col, dtype in df.dtypes if \"decimal\" in dtype]\n",
+    "for col in deicmal_cols:\n",
+    "    distribution(df.select(col), col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f01f4d33-fc66-453c-a139-7b5649202ee1",
+   "metadata": {},
+   "source": [
+    "Define the list of categorical columns and then plot them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "12d9869f-9fd7-4332-97e8-0421b0e8c8ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_cols = [\n",
+    "        \"creditLimit\",\n",
+    "        \"merchantName\",\n",
+    "        \"acqCountry\",\n",
+    "        \"merchantCountryCode\",\n",
+    "        \"posEntryMode\",\n",
+    "        \"posConditionCode\",\n",
+    "        \"merchantCategoryCode\",\n",
+    "        \"transactionType\"\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e0d9d6b2-1d96-4668-9e8b-d3ddd741b111",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in categorical_cols:\n",
+    "    countplot(df.select(col), col)"
    ]
   }
  ],
