Plots are now rendered with html inside markdown blocks instead

--- a/serverfiles/main.ipynb
+++ b/serverfiles/main.ipynb
@@ -39,7 +39,6 @@
    "source": [
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import col, split, when\n",
-    "from IPython.display import Image\n",
     "import importlib\n",
     "import numpy as np"
    ]
@@ -65,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f5ea8500-5e72-4486-a945-5397c05845a5",
    "metadata": {},
    "outputs": [],
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a6d90b15-4931-4612-b0e1-2fd9a871d1ba",
    "metadata": {},
    "outputs": [],
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "aacbda81-9598-4f96-a8bb-6380a4e340e8",
    "metadata": {},
    "outputs": [],
@@ -106,9 +105,7 @@
   {
    "cell_type": "markdown",
    "id": "6fe73ac3-b932-42ba-8665-60d4c09483d8",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Declare globals"
    ]
@@ -123,10 +120,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "37fc6362-cec2-42d1-94f5-043b305e4c16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['accountNumber', 'accountOpenDate', 'acqCountry'],\n",
+       " ['availableMoney', 'cardCVV', 'cardLast4Digits'],\n",
+       " ['cardPresent', 'creditLimit', 'currentBalance'],\n",
+       " ['currentExpDate', 'customerId', 'dateOfLastAddressChange'],\n",
+       " ['enteredCVV', 'expirationDateKeyInMatch', 'isFraud'],\n",
+       " ['merchantCategoryCode', 'merchantCountryCode', 'merchantName'],\n",
+       " ['posConditionCode', 'posEntryMode', 'transactionAmount'],\n",
+       " ['transactionDateTime', 'transactionType', 'creditLimitIndexed'],\n",
+       " ['merchantNameIndexed', 'acqCountryIndexed', 'merchantCountryCodeIndexed'],\n",
+       " ['posEntryModeIndexed',\n",
+       "  'posConditionCodeIndexed',\n",
+       "  'merchantCategoryCodeIndexed'],\n",
+       " ['transactionTypeIndexed', 'creditLimitEncoded', 'merchantNameEncoded'],\n",
+       " ['acqCountryEncoded', 'merchantCountryCodeEncoded', 'posEntryModeEncoded'],\n",
+       " ['posConditionCodeEncoded',\n",
+       "  'merchantCategoryCodeEncoded',\n",
+       "  'transactionTypeEncoded']]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.array(df.columns).reshape((13,3)).tolist()"
    ]
@@ -142,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "12d9869f-9fd7-4332-97e8-0421b0e8c8ae",
    "metadata": {},
    "outputs": [],
@@ -186,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "678e1595-b31b-4d36-a531-6b9a4a0ed1d8",
    "metadata": {
     "scrolled": true
@@ -204,24 +228,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fbafe73-80b0-4505-90a0-2adafdeed81f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_images([\"availableMoney_distribution.png\", \"creditLimit_distribution.png\", \"currentBalance_distribution.png\"], width=400, height=300)\n",
-    "display_images([\"transactionAmount_distribution.png\", \"creditLimit_barchart.png\", \"acqCountry_barchart.png\"], width=400, height=300)\n",
-    "display_images([\"merchantCountryCode_barchart.png\", \"posEntryMode_barchart.png\", \"posConditionCode_barchart.png\"], width=400, height=300)\n",
-    "display_images([\"merchantCategoryCode_barchart.png\", \"transactionType_barchart.png\"], width=400, height=300)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "f081170b-2323-428a-9a69-127c972d2af9",
+   "id": "c0eff458-46cb-4f87-94ab-f64c29b630e8",
    "metadata": {},
    "source": [
-    "Something that is obvious in retrospect that I didn't think about was that credit limit is really a categorical variable even though there is technically nothing preventing a bank assigning any non-negative credit limit to a customer."
+    "<div>\n",
+    "<p style=\"text-align: center;\">Plots showing the distributions of the four decimal quantities</p>\n",
+    "<img src=\"figures/availableMoney_distribution.png\" width=\"350\"/>\n",
+    "<img src=\"figures/creditLimit_distribution.png\" width=\"350\"/>\n",
+    "<img src=\"figures/currentBalance_distribution.png\" width=\"350\"/>\n",
+    "<img src=\"figures/transactionAmount_distribution.png\" width=\"350\"/><br>\n",
+    "<p style=\"text-align: center;\">Plots showing the distribution of categorical columns</p>\n",
+    "<img src=\"figures/creditLimit_barchart.png\" width=\"350\"/>\n",
+    "<img src=\"figures/acqCountry_barchart.png\" width=\"350\"/>\n",
+    "<img src=\"figures/merchantCountryCode_barchart.png\" width=\"350\"/>\n",
+    "<img src=\"figures/posEntryMode_barchart.png\" width=\"350\"/><br>\n",
+    "<img src=\"figures/merchantCategoryCode_barchart.png\" width=\"350\"/>\n",
+    "<img src=\"figures/transactionType_barchart.png\" width=\"350\"/>\n",
+    "<img src=\"figures/merchantName_barchart.png\" width=\"350\"/><br>\n",
+    "</div>\n",
+    "Something that is obvious in retrospect that I didn't think about was that credit limit is really a categorical variable even though there is technically nothing preventing a bank assigning any non-negative credit limit to a customer, so I ended up plotting it twice, once treating the values as decimal and again using the values as categorical."
    ]
   },
   {
@@ -234,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d3654cb9-22c0-47d4-a173-86d56085fad8",
    "metadata": {},
    "outputs": [],
@@ -250,28 +276,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ebcfb6d-1f00-4aad-a99f-4786cb8364d3",
+   "cell_type": "markdown",
+   "id": "bb874e54-b339-43d4-9b89-701eb1f99639",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for kind in catkinds:\n",
-    "    display_images([f\"{decimal_cols[0]}_{kind}plot_by_isFraud.png\", \n",
-    "                    f\"{decimal_cols[1]}_{kind}plot_by_isFraud.png\", \n",
-    "                    f\"{decimal_cols[2]}_{kind}plot_by_isFraud.png\", \n",
-    "                    f\"{decimal_cols[3]}_{kind}plot_by_isFraud.png\", \n",
-    "                    ], width=300, height=225)\n",
-    "display_images([f\"{categorical_cols[0]}_distribution_by_isFraud.png\", \n",
-    "                f\"{categorical_cols[1]}_distribution_by_isFraud.png\", \n",
-    "                f\"{categorical_cols[2]}_distribution_by_isFraud.png\", \n",
-    "                f\"{categorical_cols[3]}_distribution_by_isFraud.png\", \n",
-    "                ], width=300, height=225)\n",
-    "display_images([f\"{categorical_cols[4]}_distribution_by_isFraud.png\", \n",
-    "                f\"{categorical_cols[5]}_distribution_by_isFraud.png\", \n",
-    "                f\"{categorical_cols[6]}_distribution_by_isFraud.png\", \n",
-    "                f\"{categorical_cols[7]}_distribution_by_isFraud.png\", \n",
-    "                ], width=300, height=225)"
+    "<div>\n",
+    "<p style=\"text-align: center;\">Box plots of the four decimal columns, grouped by fraud/legit transactions</p>\n",
+    "<img src=\"figures/availableMoney_boxplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/creditLimit_boxplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/currentBalance_boxplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/transactionAmount_boxplot_by_isFraud.png\" width=\"350\"/><br>\n",
+    "<p style=\"text-align: center;\">Boxen plots of the four decimal columns, grouped by fraud/legit transactions</p>\n",
+    "<img src=\"figures/availableMoney_boxenplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/creditLimit_boxenplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/currentBalance_boxenplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/transactionAmount_boxenplot_by_isFraud.png\" width=\"350\"/><br>\n",
+    "<p style=\"text-align: center;\">Strip plots of the four decimal columns, grouped by fraud/legit transactions</p>\n",
+    "<img src=\"figures/availableMoney_stripplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/creditLimit_stripplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/currentBalance_stripplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/transactionAmount_stripplot_by_isFraud.png\" width=\"350\"/><br>\n",
+    "<p style=\"text-align: center;\">Violin plots of the four decimal columns, grouped by fraud/legit transactions</p>\n",
+    "<img src=\"figures/availableMoney_violinplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/creditLimit_violinplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/currentBalance_violinplot_by_isFraud.png\" width=\"350\"/>\n",
+    "<img src=\"figures/transactionAmount_violinplot_by_isFraud.png\" width=\"350\"/><br>\n",
+    "</div>"
    ]
   },
   {
@@ -297,10 +327,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e9d58ec7-4a2d-4aaa-9253-f61feb50e6a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'catplot' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcatplot\u001b[49m(df.select(\u001b[33m\"\u001b[39m\u001b[33misFraud\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mtransactionAmount\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mtransactionType\u001b[39m\u001b[33m\"\u001b[39m), \u001b[33m\"\u001b[39m\u001b[33misFraud\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mtransactionAmount\u001b[39m\u001b[33m\"\u001b[39m, kind=\u001b[33m\"\u001b[39m\u001b[33mviolin\u001b[39m\u001b[33m\"\u001b[39m, hue=\u001b[33m\"\u001b[39m\u001b[33mtransactionType\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      2\u001b[39m Image(filename=\u001b[33m\"\u001b[39m\u001b[33mfigures/transactionAmount_violinplot_by_isFraud_with_transactionType.png\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'catplot' is not defined"
+     ]
+    }
+   ],
    "source": [
     "catplot(df.select(\"isFraud\", \"transactionAmount\", \"transactionType\"), \"isFraud\", \"transactionAmount\", kind=\"violin\", hue=\"transactionType\")\n",
     "Image(filename=\"figures/transactionAmount_violinplot_by_isFraud_with_transactionType.png\")"
