Why isn't the resize showing up on nbviewer?!?!?!?!?!!?!?!? NANIIII

--- a/serverfiles/main.ipynb
+++ b/serverfiles/main.ipynb
@@ -327,25 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e9d58ec7-4a2d-4aaa-9253-f61feb50e6a8",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'catplot' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcatplot\u001b[49m(df.select(\u001b[33m\"\u001b[39m\u001b[33misFraud\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mtransactionAmount\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mtransactionType\u001b[39m\u001b[33m\"\u001b[39m), \u001b[33m\"\u001b[39m\u001b[33misFraud\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mtransactionAmount\u001b[39m\u001b[33m\"\u001b[39m, kind=\u001b[33m\"\u001b[39m\u001b[33mviolin\u001b[39m\u001b[33m\"\u001b[39m, hue=\u001b[33m\"\u001b[39m\u001b[33mtransactionType\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      2\u001b[39m Image(filename=\u001b[33m\"\u001b[39m\u001b[33mfigures/transactionAmount_violinplot_by_isFraud_with_transactionType.png\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'catplot' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "catplot(df.select(\"isFraud\", \"transactionAmount\", \"transactionType\"), \"isFraud\", \"transactionAmount\", kind=\"violin\", hue=\"transactionType\")\n",
-    "Image(filename=\"figures/transactionAmount_violinplot_by_isFraud_with_transactionType.png\")"
+    "#catplot(df.select(\"isFraud\", \"transactionAmount\", \"transactionType\"), \"isFraud\", \"transactionAmount\", kind=\"violin\", hue=\"transactionType\")\n",
+    "#Image(filename=\"figures/transactionAmount_violinplot_by_isFraud_with_transactionType.png\")"
    ]
   },
   {
