Minor changes to table presentation

--- a/serverfiles/data_profiling.ipynb
+++ b/serverfiles/data_profiling.ipynb
@@ -32,20 +32,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
+   "id": "75cd5a71-100d-4c4a-928b-0972912ce5b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "9dc42c37-5fce-4309-80ef-6cb886271479",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.functions import col, median, mode, skewness, split, when\n",
+    "from pyspark.sql.functions import col, kurtosis, median, mode, skewness, split, when\n",
+    "from pyspark.sql.functions import round as dfround\n",
     "import importlib\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fb97774c-efb9-466f-a562-03239698affa",
    "metadata": {},
    "outputs": [],
@@ -64,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f5ea8500-5e72-4486-a945-5397c05845a5",
    "metadata": {},
    "outputs": [],
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "a6d90b15-4931-4612-b0e1-2fd9a871d1ba",
    "metadata": {},
    "outputs": [],
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "aacbda81-9598-4f96-a8bb-6380a4e340e8",
    "metadata": {},
    "outputs": [],
@@ -120,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "37fc6362-cec2-42d1-94f5-043b305e4c16",
    "metadata": {},
    "outputs": [
@@ -146,7 +157,7 @@
        "  'transactionTypeEncoded']]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "12d9869f-9fd7-4332-97e8-0421b0e8c8ae",
    "metadata": {},
    "outputs": [],
@@ -197,7 +208,7 @@
    "id": "3f7b234c-78a9-488f-941f-e3c4c4cda4d3",
    "metadata": {},
    "source": [
-    "# Distribution of values"
+    "# Visually inspecting the distribution of values"
    ]
   },
   {
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "596aa8b0-1ac3-4f0c-9bed-d644199580e0",
    "metadata": {},
    "outputs": [
@@ -226,50 +237,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+-------+-----------------+------------------+-----------------+-----------------+\n",
-      "|summary|   availableMoney|       creditLimit|   currentBalance|transactionAmount|\n",
-      "+-------+-----------------+------------------+-----------------+-----------------+\n",
-      "|  count|           786363|            786363|           786363|           786363|\n",
-      "|   mean|      6250.725369|      10759.464459|      4508.739089|       136.985791|\n",
-      "| stddev|8880.783989147438|11636.174889962065|6457.442068131113| 147.725569019521|\n",
-      "|    min|         -1005.63|            250.00|             0.00|             0.00|\n",
-      "|    25%|          1077.12|            5000.0|           689.72|            33.65|\n",
-      "|    50%|          3184.02|            7500.0|           2451.2|            87.89|\n",
-      "|    75%|           7500.0|           15000.0|          5289.06|           191.44|\n",
-      "|    max|         50000.00|          50000.00|         47498.81|          2011.54|\n",
-      "+-------+-----------------+------------------+-----------------+-----------------+\n",
-      "\n",
-      "+------------------------+----------------------+--------------------+\n",
-      "|skewness(availableMoney)|median(availableMoney)|mode(availableMoney)|\n",
-      "+------------------------+----------------------+--------------------+\n",
-      "|       2.999317874124734|               3184.86|              250.00|\n",
-      "+------------------------+----------------------+--------------------+\n",
-      "\n",
-      "+---------------------+-------------------+-----------------+\n",
-      "|skewness(creditLimit)|median(creditLimit)|mode(creditLimit)|\n",
-      "+---------------------+-------------------+-----------------+\n",
-      "|     2.28030781343198|             7500.0|          5000.00|\n",
-      "+---------------------+-------------------+-----------------+\n",
-      "\n",
-      "+------------------------+----------------------+--------------------+\n",
-      "|skewness(currentBalance)|median(currentBalance)|mode(currentBalance)|\n",
-      "+------------------------+----------------------+--------------------+\n",
-      "|       3.362130294598129|               2451.76|                0.00|\n",
-      "+------------------------+----------------------+--------------------+\n",
-      "\n",
-      "+---------------------------+-------------------------+-----------------------+\n",
-      "|skewness(transactionAmount)|median(transactionAmount)|mode(transactionAmount)|\n",
-      "+---------------------------+-------------------------+-----------------------+\n",
-      "|         2.0922422738206348|                     87.9|                   0.00|\n",
-      "+---------------------------+-------------------------+-----------------------+\n",
+      "+--------+-----------------+------------------+-----------------+-----------------+\n",
+      "| summary|   availableMoney|       creditLimit|   currentBalance|transactionAmount|\n",
+      "+--------+-----------------+------------------+-----------------+-----------------+\n",
+      "|   count|         786363.0|          786363.0|         786363.0|         786363.0|\n",
+      "|    mean|      6250.725369|      10759.464459|      4508.739089|       136.985791|\n",
+      "|  stddev|8880.783989147438|11636.174889962065|6457.442068131113| 147.725569019521|\n",
+      "|     min|         -1005.63|             250.0|              0.0|              0.0|\n",
+      "|     25%|          1077.12|            5000.0|           689.72|            33.65|\n",
+      "|     50%|          3184.02|            7500.0|           2451.2|            87.89|\n",
+      "|     75%|           7500.0|           15000.0|          5289.06|           191.44|\n",
+      "|     max|          50000.0|           50000.0|         47498.81|          2011.54|\n",
+      "|  median|          3184.86|            7500.0|          2451.76|             87.9|\n",
+      "|    mode|            250.0|            5000.0|              0.0|              0.0|\n",
+      "|skewness|              3.0|              2.28|             3.36|             2.09|\n",
+      "|kurtosis|            10.27|              5.17|            14.61|             6.45|\n",
+      "+--------+-----------------+------------------+-----------------+-----------------+\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "df.select(decimal_cols).summary().show()\n",
-    "for col in decimal_cols:\n",
-    "    df.select(skewness(col), median(col), mode(col)).show()"
+    "summary = df.select(decimal_cols).summary()\n",
+    "rows = [df.select([dfround(func(c), 2).alias(c) for c in decimal_cols])\n",
+    "        .withColumn(\"summary\", F.lit(name))\n",
+    "    for name, func in zip(\n",
+    "        [\"median\", \"mode\", \"skewness\", \"kurtosis\"],\n",
+    "        [median, mode, skewness, kurtosis])\n",
+    "]\n",
+    "stats_df = reduce(lambda a, b: a.unionByName(b), rows)\n",
+    "summary = summary.unionByName(stats_df)\n",
+    "summary.show()"
    ]
   },
   {
@@ -586,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "id": "b9c4c25e-56b1-4d6a-a08a-5d4e9194057a",
    "metadata": {},
    "outputs": [],
